# solar-system-api

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt  solarsys.py
config/: Dockerfile  Dockerfile.dockerfile  docker-compose.yml  settings.py  urls.py
core/: admin.py  authentication.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  start.sh  urls.py  utils.py  views.py  views_auth.py
core/management/commands/: remider.py
core/migrations/: 0001_initial.py  0002_alter_auditlog_action_alter_user_email_and_more.py  0002_meter_credit_balance_alter_bill_status_and_more.py  0002_rename_changelog_auditlog_alter_user_groups_and_more.py  0003_auditlog_user_snapshot.py  0003_complaint_technician_transaction_is_applied_and_more.py  0003_rename_telephone_user_phone_auditlog_metadata_and_more.py  0004_alter_auditlog_action_alter_user_email.py  0005_alter_user_email.py  0005_meter_description_meter_meter_type_and_more.py  0006_merge_20250527_0005.py  0006_meter_description_meter_meter_type.py  0007_auditlog_metadata_auditlog_success_and_more.py
